--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -340,7 +340,7 @@
         </p>
     </div>
     <!-- End Header -->
-    <form id="file-upload-form" class="uploader" action="/uploadRecipe" method="post" enctype="multipart/form-data">
+    <form id="file-upload-form" class="uploader" action="/uploadReceipt" method="post" enctype="multipart/form-data">
         <!-- Drop Zoon -->
         <div id="dropZoon" class="upload-area__drop-zoon drop-zoon">
     <span class="drop-zoon__icon">
