--- a/src/main/resources/templates/check.html
+++ b/src/main/resources/templates/check.html
@@ -44,6 +44,7 @@
       font-size: 14px; /* Reduced font size */
     }
   </style>
+  <title>Check if correct</title>
 </head>
 <body>
 <div class="container">
@@ -53,7 +54,7 @@
   <div class="text">
     <h2>Expected</h2>
     <form action="/submitReceipt" method="post">
-    <textarea th:text="${receipt.getExpected()}" name="expected" id="expected"></textarea>
+      <label for="expected"></label><textarea th:text="${receipt.getExpected()}" name="expected" id="expected"></textarea>
       <input type="hidden" th:value="${receipt.getId()}" name="id" id="id" />
       <input type="submit" value="Submit" />
     </form>
