--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Receipt Scanner</title>
 <!--    <link rel="stylesheet" href="../static/style.css">-->
 
     <style>
